syntax = "proto3";

option csharp_namespace = "GrpcDADTKV";

package dadtkv;

service DadTkvLeaseManagerService {
  rpc RequestLease (RequestLeaseRequest) returns (RequestLeaseReply);
}

message RequestLeaseRequest {
  string TransactionManager = 1;
  repeated string permissions = 2;
}

message RequestLeaseReply {}